eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/External_Session__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Sessions</relationshipLabel>
        <relationshipName>External_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Date__c</fullName>
        <label>Active Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Continue_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Continue Application</label>
        <referenceTo>Continue_Application__c</referenceTo>
        <relationshipLabel>External Sessions</relationshipLabel>
        <relationshipName>External_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expires__c</fullName>
        <formula>Active_Date__c + 0.015</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>IF( Expires__c &gt; NOW() , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>External Sessions</relationshipLabel>
        <relationshipName>External_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>External Session</label>
    <listViews>
        <fullName>Online_Banking</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Online Banking</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>External Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>